--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "devStartChat": "nodemon chatServer.js",
-    "devStart": "nodemon server.js"
+    "devStartLogin": "nodemon loginServer.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.12",
     "socket.io": "^4.2.0"
   },
   "devDependencies": {
