--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "devStartChat": "nodemon chatServer.js",
-    "devStartLogin": "nodemon loginServer.js"
+    "devStartLogin": "nodemon loginServer.js",
+    "devStartPhone": "nodemon phoneServer.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
-    "socket.io": "^4.2.0"
+    "node-fetch": "2.0",
+    "socket.io": "^4.2.0",
+    "twilio": "^3.71.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
