--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "devStartChat": "nodemon chatServer.js",
     "devStartLogin": "nodemon loginServer.js",
-    "devStartPhone": "nodemon phoneServer.js"
+    "devStartPhone": "nodemon phoneServer.js",
+    "devStartContact": "nodemon contactServer.js",
+    "devStartInteraction": "nodemon interactionServer.js"
   },
   "keywords": [],
   "author": "",
